--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,11 @@ img {
 .first-page-section {
   background-color: #2e2f42;
   padding: 188px 0;
+
+  background-image: url(../images/background-image-page-title.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .page-title {
@@ -137,7 +142,6 @@ img {
   line-height: 24px;
   letter-spacing: 0.64px;
   background-color: #4d5ae5;
-  cursor: pointer;
   border: none;
   border-radius: 4px;
   display: block;
@@ -173,6 +177,21 @@ img {
 .studio-list {
   display: flex;
   gap: 24px;
+}
+
+.studio-list-icons {
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: var(#2e2f42);
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
 .studio-list-elements {
@@ -224,6 +243,9 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .employees-info {
@@ -237,6 +259,24 @@ img {
 
 .employees-info .text {
   text-align: center;
+}
+
+.our-team-social-media-icons {
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #f4f4fd;
+  cursor: pointer;
+}
+
+.our-team-social-media-icons:hover,
+.our-team-social-media-icons:focus {
+  background-color: #404bbf;
 }
 
 .fourth-page-section {
@@ -253,6 +293,36 @@ img {
 
 .our-portfolio-elements {
   width: calc((100% - 48px) / 3);
+  cursor: pointer;
+}
+
+.our-portfolio-elements:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.overlay-for-apps {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  padding: 40px 32px 164px 32px;
+
+  transform: translateY(101%);
+  transition: transform 250ms ease-in-out;
+}
+
+.overlay-for-apps:hover .overlay {
+  transform: translateY(0);
 }
 
 .apps-info-container {
@@ -287,4 +357,31 @@ img {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.32px;
+}
+
+.footer-social-media {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+}
+
+.footer-icons-social-media {
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #f4f4fd;
+  cursor: pointer;
+}
+
+.footer-icons-social-media:hover,
+.footer-icons-social-media:focus {
+  background-color: #31d0aa;
 }
