--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ img {
   transform: translateY(0%);
 }
 
-.overlay {
+.overlay-box {
   position: relative;
   overflow: hidden;
 }
@@ -357,7 +357,6 @@ img {
   background-color: #4d5ae5;
   color: #f4f4fd;
   padding: 40px 32px;
-
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -422,8 +421,6 @@ img {
 .icons-social-media {
   width: 40px;
   height: 40px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link {
@@ -434,6 +431,8 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link:hover,
