--- a/css/styles.css
+++ b/css/styles.css
@@ -338,6 +338,9 @@ img {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.our-portfolio-elements:hover .overlay-text {
   transform: translateY(0%);
 }
 
